# kandle

./: CMakeLists.txt  kandle.spec  kandle.tmpl.spec  kandle_autocomplete.zsh  rpmbuild.sh
.tito/: tito.props
.tito/templates/: KandleVersion.cmake.tpl
cmake/: KandleVersion.cmake
include/: cxxopts.hpp
include/eschema/: release.hpp
src/: CMakeLists.txt  main.cpp
